# Demo-Multi-Agent-NIMs-for-Protein-Folding

./: .gitignore  LICENSE  README.md  env  environment.yaml  main.py  setup.sh
notebooks/: Lab-1.0-setup-env.md  Lab-1.0-setup-up-credentials.md  Lab-1.1-esmfold-nim-playground.ipynb  Lab-1.2-Boltz-1.ipynb  Lab-1.2-igfold.ipynb  Lab-1.2-simple-lab-assistant.ipynb  Lab-1.3-LLM-NIMs.ipynb  Lab-1.3-LLM.ipynb  Lab-1.4-simple-lab-assistant.ipynb  Lab-1.4-tool-calling-agent.ipynb  Lab-1.5-simple-lab-assistant.ipynb  Lab-2.0-setup-env.md  output.yaml
notebooks/input/: 1JHL_min_48GB_GPU.yaml  7WJ3.yaml  adalimumab.yaml  keytruda.yaml  monomer.yaml  multimer.yaml
notebooks/output/boltz_results_multimer/msa/: multimer_0.csv  multimer_1.csv
notebooks/output/boltz_results_multimer/msa/tmp_env/: bfd.mgnify30.metaeuk30.smag30.a3m  pdb70.m8  uniref.a3m
notebooks/output/boltz_results_multimer/msa/tmp_pairgreedy-env/: pair.a3m
notebooks/output/boltz_results_multimer/predictions/multimer/: confidence_multimer_model_0.json  plddt_multimer_model_0.npz
notebooks/output/boltz_results_multimer/processed/: manifest.json
notebooks/output/boltz_results_multimer/processed/msa/: multimer_0.npz
notebooks/output2/: my_antibody.fasta
research_assistant/: README.md  pyproject.toml
research_assistant/src/research_assistant/: crew.py  main.py
research_assistant/src/research_assistant/config/: agents.yaml  tasks.yaml
research_assistant/src/research_assistant/tools/: custom_tool.py  helpers.py
research_assistant/tests/: test_igfold.py
(+1 files in other folders)
